--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+body {
 background:
 linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
 linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
@@ -7,6 +8,7 @@ linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
 linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
 background-color: #131313;
 background-size: 20px 20px;
+}
 
 #name {
 	font-family: "Palatino Linotype", "Times New Roman";
