--- a/index.css
+++ b/index.css
@@ -11,9 +11,9 @@ background-size: 20px 20px;
 }
 
 #name {
-	font-family: "Palatino Linotype", "Times New Roman";
-	text-align: left;
+	font-family: "Palatino Linotype";
 	font-size: 70px;
+	font-style: italic;
 }
 
 #right {
