--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
-
 * {
-	border-style:solid;
+	border-style:dashed;
 }
 	
 body {
@@ -14,7 +13,7 @@ body {
 	font-size: 100px;
 	font-style: italic;
 	text-align: center;
-	margin-top
+	margin-top: 150px;
 }
 
 
