--- a/index.css
+++ b/index.css
@@ -13,9 +13,8 @@ body {
 	padding-bottom:10px;
 }
 
-.center {
+li {
 	display: inline;
-	text-align: center;
 	font-family: "Palatino Linotype";
 	font-size: 28pt;
 }
