--- a/index.css
+++ b/index.css
@@ -13,8 +13,15 @@ body {
 	padding-bottom:10px;
 }
 
+ul {
+	list-style-type:none;
+	padding: 0px;
+	margin: 0px;
+}
+
 a {
+	display: block;
 	font-family: "Palatino Linotype";
 	font-size: 28pt;
-	underline: none;
+	text-decoration: none;
 }
