--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 ul {
 	list-style-type:none;
 	padding: 0px;
-	margin-left: 10px;
+	margin-left: 1cm;
 }
 
 a {
@@ -24,4 +24,14 @@ a {
 	font-family: "Palatino Linotype";
 	font-size: 28pt;
 	text-decoration: none;
+}
+
+a:link{
+	color:black;
+}
+a:hover{
+	color:white;
+}
+a:visited {
+	color:purple;
 }
