--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ a {
 	font-family: "Palatino Linotype";
 	font-size: 34pt;
 	text-decoration: none;
-	padding-right:50px;
+	padding:60px;
 }
 
 a:link{
