--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 body {
 	background-image: url("green_cup.png");
 
@@ -22,6 +21,10 @@ ul {
 
 li {
 	padding:40px;
+}
+
+ul li: nth-child(2) {
+	padding-top: 20px;
 }
 
 a {
