--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
 h2 {
 	font-family: "Palatino Linotype";
 	text-align: right;
+	padding-right:30px;
 }
 
 ul {
@@ -31,7 +32,8 @@ li {
 }
 
 ul li li {
-	padding-top:20px;
+	padding-bottom:20px;
+	margin
 }
 
 a {
