--- a/index.css
+++ b/index.css
@@ -14,6 +14,12 @@ body {
 	padding-bottom:5px;
 	margin-right:30px;
 }
+h1 {
+	font-family:"Palatino Linotype";
+	font-size:36pt;
+	text-decoration:underline;
+	
+}
 
 h2 {
 	font-family: "Palatino Linotype";
