--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 
-
 body {
 	background-image: url("green_cup.png");
 
@@ -21,6 +20,7 @@ h2 {
 	text-align: right;
 	padding-right: 70px;
 	margin-top:0px;
+	text-decoration: underline;
 }
 
 #greeting {
