--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 body {
 	background-image: url("green_cup.png");
 
@@ -46,6 +45,7 @@ a {
 	font-size: 34pt;
 	text-decoration: none;
 	padding-right: 50px;
+	padding-left:0px;
 }
 
 a:link{
