--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 *{border-style:dashed;}
 body {
 	background-image: url("green_cup.png");
@@ -48,6 +47,7 @@ a {
 	text-decoration: none;
 	padding-right: 50px;
 	padding-left:0px;
+	margin-left:0px;
 }
 
 a:link{
