--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-*{border-style:dashed;}
 
 body {
 	background-image: url("green_cup.png");
@@ -48,6 +47,7 @@ a {
 
 a:link{
 	color:black;
+	text-decoration: none;
 }
 a:hover{
 	color:white;
