--- a/index.css
+++ b/index.css
@@ -21,7 +21,16 @@ h2 {
 	margin-top:0px;
 	text-decoration: underline;
 }
-
+div #bio{
+	width:200px;
+	height:100px;
+	background:green;
+	transition-property: width;
+	transition-duration: 2s;
+}
+div #bio:hover{
+	width: 300px;
+}
 a {
 	font-family: "Palatino Linotype";
 	font-size: 34pt;
