--- a/index.css
+++ b/index.css
@@ -25,9 +25,7 @@ a {
 	font-family: "Palatino Linotype";
 	font-size: 34pt;
 	text-decoration: none;
-	padding-right: 50px;
-	padding-left:0px;
-	margin-left:30px;
+	text-align:left;
 }
 
 a:link{
