--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ h2 {
 p {
 	font-family: "Palatino Linotype";
 	font-size: 34pt;
-	text-align:left;
+	text-align:right;
 }
 a {text-decoration: none;
 }
