--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
 #name {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 36pt;
+	font-weight: 300;
 	text-align: center;
 	margin-top: 30px;
 	padding-bottom:5px;
