--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
-	background-color: #f7f7f7;
-	background-image: url(http://www.transparenttextures.com/theme/images/patterns/brushed-alum.png);
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */;
+	background-color: #ba8212;
+background-image: url(http://www.transparenttextures.com/patterns/brushed-alum.png);
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 
 }
 
