--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #ba8212;
-background-image: url(http://www.transparenttextures.com/patterns/brushed-alum.png);
+	background-image: url(./brushed-alum.png);
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 
 }
