--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 #name {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Alegreya Sans', sans-serif;
 	font-size: 36pt;
 	text-align: center;
 	margin-top: 50px;
