--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 #name {
-	font-family: 'Alegreya Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 64px;
 	text-align: center;
 	margin-top: 50px;
@@ -14,6 +14,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 28px;
 	text-align:center;
+	
 }
 a {
 	text-decoration: none;
