--- a/resume.css
+++ b/resume.css
@@ -1,6 +1,6 @@
 body {
-	background-image: url("green_cup.png");
-	font-family:"Palatino Linotype";
+	background-color: #ba8212;
+	background-image: url(./brushed-alum.png);
 
 }
 
