--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
 	margin-top: 75px;
 }
 
-#links {
+.links {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 60px;
 	text-align:center;
