--- a/index.css
+++ b/index.css
@@ -1,35 +1,32 @@
 body {
-	background-color: #ba8212;
-	background-image: url(./brushed-alum.png);
+	font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !important;
+	font-weight: 200;
+	font-size: 20px;
 }
 
-#name {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 100px;
+.parallax-background {
+	background-color: #0078A0;
+	height: 620px;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+	background-size: cover;
+	position: fixed;
+	width: 100%;
+}
+
+.intro-text {
+	font-size: 50px;
+	color: #fff;
 	text-align: center;
-	margin-top: 75px;
+	margin-top: 15%;
 }
-
-.links {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 60px;
-	text-align:center;
-	
+.parallax-content {
+	max-width: 100%;
+	position: relative;
+	top: 500px;
+	padding: 50px;
+	font-size: 20px;
+	background-color: #fff;
 }
-a {
-	text-decoration: none;
-	
-}
-a:hover {
-	color:white;
-}
-a:link{
-	color:black;
-}
-}
-a:visited {
-	color:purple;
-}
-
-
-
