--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 #atf-content {
-	background-image: url("atf_image.jpeg");
+	background-image: url("bcknd_blue.jpeg");
 	background-size: 1280px 640px;
 }
 .parallax-background {
