--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ a:hover {
 .bl-main > section:nth-child(3) {
 	top: 50%;
 	left: 0;
-	background: #AA5439;
+	background: #2E4172;
 }
 
 .bl-main > section:nth-child(4) {
