--- a/index.css
+++ b/index.css
@@ -435,6 +435,13 @@ section.bl-expand .bl-icon-close {
 	transition: opacity 0.3s linear 0.5s;
 }
 
+#contact-links {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	margin-top: 90px;
+}
+
 @media screen and (max-width: 46.5em) {
 	.bl-content,
 	.bl-box {
