--- a/index.css
+++ b/index.css
@@ -458,9 +458,11 @@ section.bl-expand .bl-icon-close {
 }
 
 @media screen and (max-width: 60em) {
-	#contact-links img {
+	#contact-links p a img {
 		height: 200px;
 		width: 200px;
+	}
+	#contact-links {
 		display: inline;
 	}
 }
