--- a/index.css
+++ b/index.css
@@ -457,8 +457,8 @@ section.bl-expand .bl-icon-close {
 	}
 }
 
-@media screen and (max-width: 60em) {
-	#contact-links p a img {
+@media screen and (max-width: 1em) {
+	#contact-links img {
 		height: 200px;
 		width: 200px;
 	}
