--- a/index.css
+++ b/index.css
@@ -447,6 +447,11 @@ section.bl-expand .bl-icon-close {
 	width: 80%;
 	float: right;
 }
+#technologies {
+	display: flex;
+	align-items:center;
+	float:right;
+}
 
 @media screen and (max-width: 46.5em) {
 	.bl-content,
