--- a/index.css
+++ b/index.css
@@ -451,6 +451,13 @@ section.bl-expand .bl-icon-close {
 	display: flex;
 	align-items:center;
 	float:right;
+	padding: 30px;
+	justify-content:center;
+}
+#technologies p a img {
+	height: 100px;
+	width: 100px;
+
 }
 
 @media screen and (max-width: 46.5em) {
