--- a/index.css
+++ b/index.css
@@ -453,6 +453,7 @@ section.bl-expand .bl-icon-close {
 	float:right;
 	padding: 30px;
 	justify-content:center;
+	width: 100%;
 }
 #technologies p a img {
 	height: 100px;
