--- a/index.css
+++ b/index.css
@@ -282,7 +282,7 @@ div.bl-panel-items {
 }
 
 div.bl-panel-items > div {
-	background: #3ba5db;
+	background: orange;
 	z-index: 0;
 	opacity: 0;
 	-webkit-transform: translateY(0);
