--- a/index.css
+++ b/index.css
@@ -20,6 +20,15 @@ body, html { font-size: 100%; padding: 0; margin: 0; height: 100%;}
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+::-webkit-scrollbar {
+      width: 15px;
+}
+::-webkit-scrollbar-track {
+      background-color: #b46868;
+} 
+::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 0, 0, 0.2); 
+}
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
