--- a/index.css
+++ b/index.css
@@ -248,6 +248,7 @@ div.bl-panel-items > div > div {
 .bl-content > ul li a img {
 	display: block;
 	max-width: 100%;
+	height:150px;
 }
 
 /* Panel Items */
@@ -482,7 +483,8 @@ section.bl-expand .bl-icon-close {
 	}
 
 	.bl-content > ul li {
-		width: 40%;
+		width: 20%;
+		padding: 10px;
 	}
 }
 
