--- a/index.css
+++ b/index.css
@@ -1,13 +1,75 @@
-
-
-.landing {
-   background:url(http://graphicburger.com/wp-content/uploads/2013/10/Bokeh-600.jpg) no-repeat center center fixed;
-    text-align: center;
-    min-height: 100vh;
-    display: block;
-  position:relative;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+html {
+  height: 100%;
+  overflow: hidden;
 }
+
+body {
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  -webkit-perspective: 1px;
+  perspective: 1px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+header {
+  box-sizing: border-box;
+  min-height: 40vw;
+  padding: 5vw 0 5vw;
+  position: relative;
+  -webkit-transform-style: inherit;
+  transform-style: inherit;
+  width: 100vw;
+}
+
+header, header:before { 
+	background: 50% 50% / cover; 
+}
+
+header::before {
+  bottom: 0;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  background-color: #8a8;
+  background-image: url("./images/bufadora.jpg");
+  background-size: cover;
+  -webkit-transform-origin: center center 0;
+  -webkit-transform: translateZ(-1px) scale(2);
+  transform-origin: center center 0;
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
+  min-height: 100vh;
+}
+
+header * {
+  font-weight: normal;
+  letter-spacing: 0.2em;
+  text-align: center;
+  margin: 0;
+  padding: 1em 0;
+}
+
+header p { 
+	background-color: hsla(0, 0%, 100%,0.4); 
+}
+
+main {
+  background-color: hsl(60, 10%, 10%);
+  line-height: 1.7;
+  max-width: 100%;
+  padding: 5% calc(50% - 16em) 35%;
+  position: relative;
+  z-index: 2;
+}
+h1 {
+	font-size: 10vh;
+}
+
