--- a/index.css
+++ b/index.css
@@ -58,43 +58,51 @@ header * {
 }
 
 header p { 
-	background-color: hsla(0, 0%, 100%,0.4); 
-    margin-top: -1.5em;
+	background-color: hsla(0, 0%, 100%,0.4);
     color: black;
     font-weight: bold;
+    border-style: solid;
+    margin-top: -4.5em;
 }
 
 #about-me {
-  background-color: hsl(60, 10%, 10%);
+  opacity: .95;
   line-height: 1.7;
-  max-width: 100%;
-  padding: 2.5% calc(50% - 16em) 35%;
   position: relative;
   z-index: 2;
   background-color: coral;
-  height: 20vh;
+  max-height: 150vh;
+  padding: 2.5em;
+}
+#about-desc  p {
+  font-size: 16px;
 }
 h1 {
+	color: white;
 	font-size: 10vh;
-	margin-bottom: :-1vh;
 }
-#about-me {
-	text-align: center;
+#prof-pic {
+  height:40vh;
+  width: 50vh;
+  margin-bottom:1vh;
+  border-radius: 25px;
+  margin-top: 2.5em;
 }
 h2 {
 	font-size: 7vh;
 }
-#about-me > p {
-	font-size: 2.5vh;
-}
 #resume {
 	line-height: 1.7;
-  	max-width: 100%;
- 	padding: 2.5% calc(50% - 16em) 35%;
+  padding: 2.5em;
   	position: relative;
   	z-index: 2;
   	background-color: bisque;
-  	height: 20vh;
+  	max-height: 150vh;
 }
-
-
+.container {
+  width:100%;
+}
+#profile-image {
+  text-align: center;
+}
+border-radius: 25px;
