--- a/index.css
+++ b/index.css
@@ -62,9 +62,11 @@ header p {
     color: black;
     font-weight: bold;
     border-style: solid;
-    margin-top: -4.5em;
+    margin-top: -4em;
 }
-
+.container {
+  width:100%;
+}
 #about-me {
   opacity: .95;
   line-height: 1.7;
@@ -74,12 +76,15 @@ header p {
   max-height: 150vh;
   padding: 2.5em;
 }
-#about-desc  p {
+p  {
   font-size: 16px;
 }
 h1 {
 	color: white;
 	font-size: 10vh;
+}
+h2 {
+  font-size: 7vh;
 }
 #prof-pic {
   height:40vh;
@@ -88,21 +93,29 @@ h1 {
   border-radius: 25px;
   margin-top: 2.5em;
 }
-h2 {
-	font-size: 7vh;
-}
 #resume {
 	line-height: 1.7;
+  position: relative;
+  z-index: 2;
+  background-color: burlywood;
+  max-height: 150vh;
   padding: 2.5em;
-  	position: relative;
-  	z-index: 2;
-  	background-color: bisque;
-  	max-height: 150vh;
 }
-.container {
-  width:100%;
+#resume-icon {
+  height:40vh;
+  width: 45vh;
+  margin-bottom:1vh;
+  border-radius: 25px;
+  margin-top: 2.5em;
 }
-#profile-image {
+#profile-image, #resume-icon-col {
   text-align: center;
 }
-border-radius: 25px;
+#contact {
+
+}
+
+
+
+
+
