portfolio custom thumbnails

--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ header * {
   line-height: 1.7;
   position: relative;
   z-index: 2;
-  max-height: 170vh;
+  max-height: 250vh;
   padding: 2.5em;
 }
 
@@ -92,12 +92,15 @@ header * {
 #portfolio {
   background-color: #BCECBD;
 }
+div.thumbnail img {
+  height: 35vh;
+}
 .item  {
 text-align: -webkit-center;
 }
 #skills-bar {
   position: relative;
-  background-color: sandybrown;
+  background-color: rgba(244, 164, 96, 0.7);
   max-height: 70vh;
 }
 #skills-bar img {
@@ -121,4 +124,7 @@ h1,header p {
 
 header p {
   font-size: 3.5vh;
+}
+h1 {
+  font-size: 7.5vh;
 }
